# ai_coding_rules

./: .coveragerc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  00-global-core.md  000-global-core.md  001-cursor-memory-bank.md  001-memory-bank.md  002-cursor-rules-governance.md  002-rule-governance.md  003-context-engineering.md  003-rule-template.md  004-tool-design-for-agents.md  01-cursor-memory-bank.md  02-cursor-rules-governance.md  10-snowflake-core.md  100-snowflake-core.md  101-snowflake-streamlit-core.md  101-snowflake-streamlit-ui.md  101a-snowflake-streamlit-visualization.md  101b-snowflake-streamlit-performance.md  101c-snowflake-streamlit-security.md  101d-snowflake-streamlit-testing.md  102-snowflake-sql-best-practices.md  102-snowflake-sql-demo-engineering.md  102a-snowflake-sql-automation.md  103-snowflake-performance-tuning.md  104-snowflake-streams-tasks.md  105-snowflake-cost-governance.md  106-snowflake-semantic-views.md  107-snowflake-security-governance.md  108-snowflake-data-loading.md  109-snowflake-notebooks.md  109a-snowflake-notebooks-tutorials.md  109c-snowflake-app-deployment.md  11-snowflake-streamlit-ui.md  110-snowflake-model-registry.md  111-snowflake-observability.md  112-snowflake-snowcli.md  113-snowflake-feature-store.md  (+121 more)
.github/: release.yml
.gitlab/: repo_meta.yaml
discovery/: AGENTS.md  EXAMPLE_PROMPT.md  RULES_INDEX.md
docs/: AGENTS_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  EXAMPLE_GIT_WORKFLOW.md  MEMORY_BANK.md  MIGRATION.md  MIGRATION_SCHEMA_v3.1_to_v3.2.md  ONBOARDING.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.4.1.md  RELEASE_NOTES_v2.4.2.md  RELEASE_NOTES_v2.5.0.md  RELEASE_NOTES_v2.6.0.md  RELEASE_NOTES_v2.6.1.md  RELEASE_WORKFLOW.md  RULE_CATALOG.md  RULE_LOADING_IMPROVEMENTS.md  TOKEN_BUDGETS.md  USING_BULK_RULE_REVIEWER_SKILL.md  USING_DOCS_REVIEWER_SKILL.md  USING_DOC_REVIEWER_SKILL.md  USING_PLAN_REVIEWER_SKILL.md  USING_RULE_CREATOR_SKILL.md  USING_RULE_LOADER_SKILL.md  USING_RULE_REVIEWER_SKILL.md  USING_RULE_REVIEW_PROMPT.md  USING_RULE_REVIEW_SKILL.md  USING_SKILL_TIMING_SKILL.md  architecture.md
plans/: 801-README-REMEDIATION-PLAN.md  SNOWFLAKE_CORE_COMPARISON.md  SNOWFLAKE_CORE_GPT52.md  SNOWFLAKE_CORE_OPUS45.md  SNOWFLAKE_CORE_SONNET45.md
prompts/: EXAMPLE_PROMPT_01.md  EXAMPLE_PROMPT_02.md  EXAMPLE_PROMPT_03.md  EXAMPLE_PROMPT_04.md  EXAMPLE_PROMPT_05.md  EXAMPLE_PROMPT_06.md  EXAMPLE_PROMPT_07.md  README.md  RULE_CREATION_PROMPT.md  RULE_REVIEW_PROMPT.md  analyze-plan.md  commit-changes.md  execute-plan.md  update-changelog.md
reviews/: 801-project-readme-review-2025-12-12.md
rules/: .keywords-cache.json  000-global-core.md  001-memory-bank.md  002-rule-governance.md  002a-rule-creation-guide.md  002a-rule-creation.md  002b-rule-optimization.md  002b-rule-update.md  002c-advanced-rule-patterns.md  002c-rule-optimization.md  002d-advanced-rule-patterns.md  002d-schema-validator-usage.md  002e-agent-optimization.md  002e-schema-validator-usage.md  002f-agent-optimization.md  002f-claude-code-skills.md  002f-schema-validator-advanced.md  002g-agent-optimization.md  002g-claude-code-skills.md  002h-claude-code-skills.md  002i-rule-loadtrigger.md  002j-rule-examples.md  002k-model-optimization.md  002l-skill-advanced-patterns.md  002m-agent-format-antipatterns.md  003-context-engineering.md  003a-long-horizon-tasks.md  004-tool-design-for-agents.md  004a-tool-set-curation.md  004b-tool-output-efficiency.md  100-snowflake-core.md  100f-snowflake-connection-errors.md  101-snowflake-streamlit-core.md  101a-snowflake-streamlit-visualization.md  101b-snowflake-streamlit-appendix-sql-errors.md  101b-snowflake-streamlit-performance.md  101c-snowflake-streamlit-security.md  101d-snowflake-streamlit-testing.md  101e-snowflake-streamlit-sql-errors.md  101f-snowflake-streamlit-deployment-errors.md  (+179 more)
schemas/: README.md  example-schema.yml  rule-schema-v3.yml  rule-schema.yml
scripts/: README_RELEASE_SCRIPT.md  badge_updater.py  build_rules_index.py  clean.sh  create-release.sh  deploy_rules.py  gen-rules.sh  generate_agent_rules.py  generate_rules_index.py  index_generator.py  keyword_generator.py  markdown_parser.py  migrate_to_templates.sh  rule_deployer.py  schema_validator.py  status.sh  template_generator.py  template_sync.py  token_validator.py  update_token_budgets.py  validate.sh  validate_agent_rules.py  validate_index_references.py  validate_timing.py
skills/: rule-creator-skill.md  rule-reviewer-skill.md
templates/: 000-global-core.md  001-memory-bank.md  002-rule-governance.md  002a-rule-boilerplate.md  003-context-engineering.md  004-tool-design-for-agents.md  100-snowflake-core.md  101-snowflake-streamlit-core.md  101a-snowflake-streamlit-visualization.md  101b-snowflake-streamlit-appendix-sql-errors.md  101b-snowflake-streamlit-performance.md  101c-snowflake-streamlit-security.md  101d-snowflake-streamlit-testing.md  102-snowflake-sql-demo-engineering.md  102a-snowflake-sql-automation.md  103-snowflake-performance-tuning.md  104-snowflake-streams-tasks.md  105-snowflake-cost-governance.md  106-snowflake-semantic-views-core.md  106-snowflake-semantic-views.md  106a-snowflake-semantic-views-advanced.md  106a-snowflake-semantic-views-querying.md  106b-snowflake-semantic-views-integration.md  106b-snowflake-semantic-views-querying.md  106c-snowflake-semantic-views-integration.md  107-snowflake-security-governance.md  108-snowflake-data-loading.md  109-snowflake-notebooks.md  109a-snowflake-notebooks-tutorials.md  109b-snowflake-app-deployment-core.md  109c-snowflake-app-deployment-troubleshooting.md  109c-snowflake-app-deployment.md  110-snowflake-model-registry.md  111-snowflake-observability-core.md  111-snowflake-observability.md  111a-snowflake-observability-logging.md  111b-snowflake-observability-tracing.md  111c-snowflake-observability-monitoring.md  112-snowflake-snowcli.md  113-snowflake-feature-store.md  (+57 more)
tests/: __init__.py  conftest.py  test_badge_updater.py  test_deploy_rules.py  test_deployment.py  (+13 more)
(+294 files in other folders)
