[project]
name = "ai_coding_rules"
version = "3.4.4"
description = "Production-ready AI coding rules for consistent, reliable software engineering across LLMs and IDEs"
readme = { file = "README.md" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Michael Young", email = "michael.young@snowflake.com" },
]
keywords = [
    "ai", "llm", "coding-rules", "engineering", "best-practices",
    "snowflake", "python", "data-engineering", "cursor", "copilot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# Runtime dependencies for validation scripts
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.9",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "scikit-learn>=1.3.0",  # TF-IDF vectorization for token_generator
    "ty",
]

[project.urls]
Homepage = "https://github.com/sfc-gh-myoung/ai_coding_rules"
Repository = "https://github.com/sfc-gh-myoung/ai_coding_rules.git"
Issues = "https://github.com/sfc-gh-myoung/ai_coding_rules/issues"
Documentation = "https://github.com/sfc-gh-myoung/ai_coding_rules/blob/main/README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # simplify
    "RUF", # ruff
    "D",  # pydocstyle
]

ignore = [
    "E501",  # line too long
    "RUF001",  # ambiguous unicode (emojis)
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, hermetic unit tests",
    "integration: tests requiring multiple components or file I/O",
    "slow: long-running tests involving subprocesses or network",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "tests/*",
    ".venv/*",
    "output/*",
    "generated/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.rule_deployer]
# Skills to exclude from deployment (internal use only)
exclude_skills = [
    "rule-creator/",
    "rule-reviewer/",
]
