[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval", "src/ai_rules"]

[project]
name = "ai_coding_rules"
version = "3.6.2"
description = "Production-ready AI coding rules for consistent, reliable software engineering across LLMs and IDEs"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Michael Young", email = "michael.young@snowflake.com" },
]
keywords = [
    "ai", "llm", "coding-rules", "engineering", "best-practices",
    "snowflake", "python", "data-engineering", "cursor", "copilot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

# Runtime dependencies for validation scripts
dependencies = [
    "pyyaml>=6.0.3",
    "typer>=0.17.0",
    "rich>=14.0.0",
    "tiktoken>=0.12.0",  # Token counting for GPT models
    "requests>=2.32.0",  # HTTP client for Cortex REST API
]

[project.optional-dependencies]
agent-eval = [
    "requests>=2.32.5",
]
[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.17",
]

[project.scripts]
ai-rules = "ai_rules.cli:app"
agent-eval = "agent_eval.cli:app"

[project.urls]
Homepage = "https://github.com/sfc-gh-myoung/ai_coding_rules"
Repository = "https://github.com/sfc-gh-myoung/ai_coding_rules.git"
Issues = "https://github.com/sfc-gh-myoung/ai_coding_rules/issues"
Documentation = "https://github.com/sfc-gh-myoung/ai_coding_rules/blob/main/README.md"

[tool.uv]
package = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # simplify
    "RUF", # ruff
    "D",  # pydocstyle
]

ignore = [
    "E501",  # line too long
    "RUF001",  # ambiguous unicode (emojis)
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, hermetic unit tests",
    "integration: tests requiring multiple components or file I/O",
    "slow: long-running tests involving subprocesses or network",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
filterwarnings = [
    "ignore:This script is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/agent_eval", "src/ai_rules"]
omit = [
    "tests/*",
    ".venv/*",
    "output/*",
    "generated/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[[tool.ty.overrides]]
include = ["tests/**"]
[tool.ty.overrides.rules]
invalid-argument-type = "ignore"  # LiteralString vs str in test fixtures
invalid-assignment = "ignore"  # list[LiteralString] vs list[str] in test fixtures

[tool.rule_deployer]
exclude_skills = [
]
